# lm-finetuning-playground

./: .gitignore  fine-tune-on-gpt.ipynb  pyproject.toml  try_lora.ipynb
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
lm_finetuning_playground/dataset/: moliere.py  personal.py  tools.py
