[tool.poetry]
name = "lm-finetuning-playground"
version = "0.1.0"
description = ""
authors = ["François Weber <frweber@soprema.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
ipykernel = "^6.29.2"
xmltodict = "^0.13.0"
transformers = "^4.39.1"
peft = "^0.10.0"
accelerate = "^0.28.0"
torch = "^2.2.1"
sentencepiece = "^0.2.0"
nltk = "^3.8.1"
datasets = "^2.18.0"
openai = "^1.14.3"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
